--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4,6 +4,14 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.col-4{
+  width: 18%;
+  background-color: white;
+  margin: 1%;
+  padding: 2%;
+  float: left;
+}
+
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
